--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		  <li><a href="apapierniak.html">Adam Papierniak</a></li>
           <li><a href="amiller.html">Aaron Miller</a></li>
           <li><a href="mkaempf.html">Michael Kaempf</a></li>
+          <li><a href="jneath.html">John Neath</a></li>
         </ul>
       </main>
 
